[B]Note:[/B] if the scraper is very slow, disable setting tagged with "(slow)".

[B]1.1.4[/B]
- Added base scale (vote/10) in direct vote, critics and the public. Proposed on forum.xbmc.org
- Now direct vote, critics and the public is only visible as "outline", beacuse studio and mpaa not present in mymovies are get from imdb. 
- Some minor fix

[B]1.1.3[/B]
- Fixed regex: title, trailer, runtime
- Added original title
- Search imdb id from google...not perfect but i hope better.
- Import info from IMDB (vote, mpaa, studio, top250). Deactivable from settings.

[B]1.1.2[/B]
- Fixed regex: rating and trailer
- Fixed url cache 

[B]1.1.1[/B]
- Change default films search url: http://www.google.it/search?q=film_name+site:mymovies.it
- Fixed trailer problem. The first and only issue reported on code.google.com ;)
- Fixed search problem. Reported on forum.xbmc.org

[B]1.1.0[/B]
- Fixed problem for long title
- Added support for new title (asterix votes)
- Used tag <rating max="*">
- Fixed problem with single poster in low res
- Fixed trailer
- Fixed TMDB FanART
- Improved append varius stuff to plot

[B]1.0.6[/B]
- Aggiunto il supporto a XBMC 10.5 (addons system)
- Fixed trailer
- Riorganizzato il menù configurazione 