@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.mymovies.it"
        name="MyMovies.it"
-       version="1.1.4"
+       version="1.1.5"
        provider-name="muttley">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
@@ -16,19 +16,24 @@
     <summary lang="hu">MyMovies.it Film scraper</summary> 
     <summary lang="kr">MyMovies.it 영화 스크래퍼</summary>
     <summary lang="pt">Scraper de filmes MyMovies.it</summary>
-    <description lang="it">Riporta problemi o suggerimenti su: 
-https://code.google.com/p/mymovies-xbmc-scraper/issues/list
-http://forum.xbmc.org/showthread.php?t=58141
+    <description lang="it">
+Riporta problemi o suggerimenti su: 
+- https://code.google.com/p/mymovies-xbmc-scraper
+- http://forum.xbmc.org/showthread.php?t=58141
 
-Buona visione!</description>
-    <description lang="en">Report problems or suggest on: 
-https://code.google.com/p/mymovies-xbmc-scraper/issues/list
-http://forum.xbmc.org/showthread.php?t=58141
+Buona visione!
+	</description>
+    <description lang="en">
+Report problems or suggest on: 
+- https://code.google.com/p/mymovies-xbmc-scraper
+- http://forum.xbmc.org/showthread.php?t=58141
 
-Enjoy!</description>
+Enjoy!
+	</description>
     <description lang="hu">Film információk letöltése a www.mymovies.it webhelyről</description>
     <description lang="kr">MyMovies.it 에서 영화 정보 다운로드</description>
     <description lang="pt">Descarregar informação de filmes de www.mymovies.it</description>
+    <disclaimer>If the scraper is very slow, disable setting tagged with "(slow)".</disclaimer>
     <platform>all</platform>
   </extension>
 </addon>
