@@ -123,11 +123,12 @@
 				<expression noclean="1">&lt;td class=&quot;rec_link_disattivo&quot;&gt;&lt;a title=&quot;Cast [^&quot;]+&quot; href=&quot;([^&quot;]+)&quot;&gt;Cast&lt;/a&gt;&lt;/td&gt;</expression>
 			</RegExp>
 
-			<!-- Thumb -->
+			<!-- Thumbs -->
+			<!-- Low res thumb get from first (scheda) film page -->
 			<RegExp conditional="!thumbs" input="$$1" output="&lt;thumb&gt;\1&lt;/thumb&gt;" dest="5+">
 				<expression cs="true" noclean="1">&lt;img style=&quot;[^&quot;]+&quot; src=&quot;([^&quot;]+)&quot; width=&quot;150px&quot; alt=&quot;Locandina</expression>
 			</RegExp>
-			<!-- else All Thumbs -->
+			<!-- Get all film thumbs -->
 			<RegExp conditional="thumbs" input="$$1" output="&lt;url function=&quot;GetMovieThumbs&quot;&gt;\1&lt;/url&gt;" dest="5+">
 				<expression noclean="1">&lt;td class=&quot;rec_link_disattivo&quot;&gt;&lt;a title=&quot;Poster [^&quot;]+&quot; href=&quot;([^&quot;]+)&quot;&gt;Poster&lt;/a&gt;&lt;/td&gt;</expression>
 			</RegExp>
@@ -216,8 +217,7 @@
 	
 	<GetMovieTrailer dest="5">
 		<RegExp input="$$1" output="&lt;details&gt;&lt;trailer&gt;\1&lt;/trailer&gt;&lt;/details&gt;" dest="5">
-			<expression noclean="1">&apos;(http://[^&apos;]+trailer.flv)&apos;</expression>
-			<!-- <expression noclean="1">url: &apos;([^&apos;|?]+\.flv).*&apos;</expression> -->
+			<expression noclean="1">&apos;(http://[^&apos;\?]+trailer[^&apos;\?]*\.flv)</expression>
 		</RegExp>
 	</GetMovieTrailer>
 
