@@ -1,4 +1,5 @@
-[B]Note:[/B] if the scraper is very slow, disable setting tagged with "(slow)".
+[B]1.1.5[/B]
+- Fixed regex: trailer
 
 [B]1.1.4[/B]
 - Added base scale (vote/10) in direct vote, critics and the public. Proposed on forum.xbmc.org
